--- a/todoStyle.css
+++ b/todoStyle.css
@@ -1,14 +1,16 @@
 .container {
     box-sizing: border-box;
     padding: 20px;
+    padding-bottom: 100px;
     background-color: white;
-    border: 1px solid #ccc;
+    border-style: none;
     width: 60%;
+    margin: auto;
 }
 
 body {
-    font-family: fantasy;
-    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
 }
 
 ul {
